TEST_PROGRAMS/INVALID/Yash_Gupta/I2.min
var x:int;
var y:float;
var z:int;
if  x then y = -0.0; else y = -0.0; endif
while z do z = 1; done
%#Characterthat is not supported










